# PoR

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  build.sh  build_tokenizer_ai.sh  build_word_ai.sh  deploy-ledger.sh  dfx.json  ledger-canister.wasm  mops.toml  package-lock.json  package.json  tailwind.config.js  upload-models-to-canister.sh  upload-search-models.sh  vite.config.ts
backend/: Backend.mo
backend/auth/: main.mo
backend/forms/: Main.mo
backend_ai/: Cargo.toml
backend_ai/src/: benchmarking.rs  lib.rs  onnx.rs  tokenizer.rs
icp_index_canister/: index.did
icp_ledger_canister/: dfx.json
icp_ledger_canister/src/icp_ledger_canister_backend/: main.mo
src/: App.css  App.tsx  index.html  index.scss  main.tsx
src/actor/: LedgerActor.ts
src/components/: Balance.tsx  CountUp.tsx  FloatingElements.tsx  Footer.tsx  FormBuilder.tsx  FormPreview.tsx  FormSummaryViewer.tsx  MaskText.tsx  Navbar.tsx  QuestionEditor.tsx  QuestionField.tsx  QuestionTypeSelector.tsx  SettingModal.tsx  WalletButton.tsx  WrapTest.tsx  form-builder.tsx  form-preview.tsx  question-field.tsx
src/components/layouts/: MainLayout.tsx
src/context/: AuthContext.tsx
src/pages/: AddSurvey.tsx  AnswerForm.tsx  BrowsePage.tsx  FormEditor.tsx  FormResponsePage.tsx  GetVerifiedPage.tsx  HomePage.tsx  MyForm.tsx  MyFormPage.tsx  ProfilePage.tsx  Survey.tsx  TestPage.tsx
src/routes/: Routes.tsx
src/styles/: fonts.css
tokenizer_ai/: Cargo.toml  backend.did
tokenizer_ai/src/: lib.rs  tokenizer.rs
word_ai/: Cargo.toml  backend.did
word_ai/src/: embedding.rs  lib.rs
(+7 files in other folders)
