[package]
edition = "2021"
name = "word_ai"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
anyhow = "1.0"
bytes = "1.5.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokenizers = { version = "0.20.1", default-features = false, features = ["unstable_wasm"] }
ic-stable-structures = "0.6.7"
ic-wasi-polyfill = "0.6.4"
prost = "0.11.0"
prost-types = "0.11.0"
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }

